# langchain-training

./: .env.example  README.md  init_agent.py  main.py  pyproject.toml
module1/: basic_prompting.py  foundational_models.py  memory.py  personal_chef.py  tools.py  web_search.py
module2/: mcp.py  multiagents.py  runtime_context.py  state.py  travel_agent.py  wedding_planner.py
module3/: dynamic_models.py  dynamic_prompts.py  dynamic_tools.py  email_agent.py  hitl.py  managing_messages.py
